--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --poll=2000",
-    "build": "ng build --prod --aot --output-path docs",
+    "build": "ng build --prod --aot --output-path docs --sourcemap",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -38,10 +38,11 @@
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
     "protractor": "~5.1.2",
+    "source-map-explorer": "^1.3.3",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
